<resources>
    <string name="app_name">Other Mind</string>
    <string name="other_mind">Other Mind</string>
    <string name="social_interaction">social interaction</string>
    <string name="the_future_of">The future of</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="login">Login</string>
    <string name="enter_your_referral_code">Enter your referral code</string>
    <string name="welcome_to">Welcome To</string>
    <string name="new_user">I\'m a new user</string>
    <string name="signup">Signup</string>
    <string name="tell_us_more_about_you">Tell us more about you</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="continue_name">Continue</string>
    <string name="email">E-mail</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="we_need_to_confirm_your_information">We need to confirm your information</string>
    <string name="please_choose_one_of_the_methods_below_to_continue">Please choose one of the methods below to continue</string>
    <string name="send_via_sms">Send via SMS</string>
    <string name="send_via_email">Send via email</string>
    <string name="is_this_your_number">Is this your number?</string>
    <string name="edit">Edit</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="step_1">Step 1:</string>
    <string name="your_address">What\'s your address?</string>
    <string name="almost_there">Almost there!</string>
    <string name="step_2">Step 2:</string>
    <string name="step_3">Step 3:</string>
    <string name="address">Address</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="why_do_we_ask_for_your_address">Why do we ask for your address?</string>
    <string name="username">Username</string>
    <string name="great">Great!</string>
    <string name="more_about_you">More about you</string>
    <string name="languages">Languages</string>
    <string name="add_language">Add Language</string>
    <string name="need_password">And lastly, you will \nneed a password</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="other_mind_provides_automated_translation_services_and_we_would_like_to_understand_the_languages_you_speak">Other Mind provides automated translation services and we would like to understand the languages you speak.</string>
    <string name="show">Show</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="apple_id">Apple ID</string>
    <string name="google">Google</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="your_account">Your Account</string>
    <string name="username_or_password">E-Mail, Username or Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="click_here">Click here.</string>
    <string name="we_will_send_you_a_confirmation_email_to_activate_the_change_password_action">We will send you a confirmation email to activate the \'Change Password\' action.</string>
    <string name="send_again">Send again</string>
    <string name="we_ve_sent_a_request_to_your_email_please_click_on_the_link_we_ve_sent_you">We\'ve sent a request to your email. Please, click on the link we\'ve sent you.</string>
    <string name="did_not_get_a_confirmation_email">Did not get a confirmation email?</string>
    <string name="enter_new_password">Enter your new password.</string>
    <string name="share_love">Share Love</string>
    <string name="other_mind_believes_its_also_vital_to_our_community_to_give_back_to_one_another">Other Mind believes its also vital to our community to give back to one another.</string>
    <string name="terms_and_conditions">*Terms and Conditions</string>
    <string name="no_thanks">No, thanks</string>
    <string name="refer_your_friend">Refer your friends</string>
    <string name="for_each_person_you_refer_to_the_platform_we_will_reward_you_each_month_with_1">For each person you refer to the platform we will reward you each month with $1*.</string>
    <string name="you_re_all_set_enjoy">You\'re all set. Enjoy!</string>
    <string name="thank_you_for_choosing_nto_support_clean_oceans">Thank you for choosing \nto support Clean Oceans!</string>
    <string name="a_portion_of_your_monthly_subscription_fee_will_be_allocated_to_support_global_initiatives_in_this_area_watch_for_periodic_updates_on_our_projects_and_their_positive_impact">A portion of your monthly subscription fee will be allocated to support global initiatives in this area. Watch for periodic updates on our projects and their positive impact.</string>
    <string name="get_started_with_other_mind">Get started with Other Mind</string>
</resources>