<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:src="@drawable/referral_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/layout_back"
            layout="@layout/layout_toolbar_opacity_back_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineTop" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_share_love"
            style="@style/boldTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/share_love"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/layout_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_description"
            style="@style/semiBoldTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/other_mind_believes_its_also_vital_to_our_community_to_give_back_to_one_another"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/txt_share_love" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt__refer_description"
            style="@style/mediumTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:text="@string/for_each_person_you_refer_to_the_platform_we_will_reward_you_each_month_with_1"

            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintBottom_toTopOf="@id/btn_refer"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:id="@+id/btn_refer"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_refferal_button"
            android:fontFamily="@font/app_medium"
            android:text="@string/refer_your_friend"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/_4sdp"
            app:backgroundTint="@color/blue_navy"
            app:icon="@drawable/ic_refferal"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@id/txt_no_thanks"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_no_thanks"
            style="@style/mediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:text="@string/no_thanks"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintBottom_toTopOf="@id/txt_terms_and_condition"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_terms_and_condition"
            style="@style/regularTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingTop="@dimen/_6sdp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginBottom="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            style="@style/guideLineStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            style="@style/guideLineTop" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            style="@style/guideLineBottom" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            style="@style/guideLineEnd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>