<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/ic_solid_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_ask"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/txtName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtName" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtName"
            style="@style/semiBoldTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/view" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@null"
            android:drawableStart="@drawable/ic_login_password"
            android:drawablePadding="@dimen/_8sdp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_visible_password"
            app:layout_constraintStart_toStartOf="@id/txtName"
            app:layout_constraintTop_toBottomOf="@id/txtName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_visible_password"
            style="@style/mediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_6sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/show"
            android:textColor="@color/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>