<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@drawable/ic_left" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:text="@string/or_continue_with" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@drawable/ic_right" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/social_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_continue">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="0.5"
                android:background="@drawable/ic_apple_bg"
                android:fontFamily="@font/app_medium"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="@dimen/_13ssp"
                app:backgroundTint="@color/border_tint"
                app:icon="@drawable/icon_google"
                app:iconGravity="textStart"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="add" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_sign_up"
            style="@style/regularTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@id/social_link" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_reset_password"
            style="@style/mediumTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/click_here"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/app_black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@id/social_link" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.56" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>