<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/back_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineTop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtStepDesc"
            style="@style/semiBoldTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/we_ve_sent_a_request_to_your_email_please_click_on_the_link_we_ve_sent_you"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_description"
            style="@style/regularTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/did_not_get_a_confirmation_email"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintBottom_toTopOf="@id/layout_send_again" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/layout_send_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/ic_button_reset"
            android:text="@string/send_again"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            style="@style/guideLineStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            style="@style/guideLineBottom" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            style="@style/guideLineTop" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            style="@style/guideLineEnd" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>